2009-10-19  scottell  <${AuthorEmail}>

	* Data/Shapefile/Shapefile.cs: fix bug which doesn't reload
	features (allow changes)

2009-08-26  Scott Ellington  <scott.ellington@gmail.com>

	* Projection/ProjFourWrapper.cs: Project and Deproject were
	swapped in behavior

2009-07-28  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump version to 0.4.2

2009-07-28  Scott Ellington  <scott.ellington@gmail.com>

	* Rectangle.cs: fix ToString output

	* Cumberland.csproj: MD changed these

2009-03-05  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: fix #8 really

2009-02-27  Scott Ellington  <scott.ellington@gmail.com>

	* Data/SimpleFeatureAccess/WellKnownBinary.cs: add parse
	linestring

2009-02-27  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump version

2009-02-26  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: fix #8

2009-02-24  Scott Ellington  <scott.ellington@gmail.com>

	* Data/SimpleFeatureAccess/WellKnownBinary.cs: minor tweak

2009-02-24  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/WellKnownText:
	* Data/SimpleFeatureAccess:
	* Data/SimpleFeatureAccess/WellKnownText.cs:
	* Data/WellKnownText/SimpleFeatureAccess.cs:
	* Data/SimpleFeatureAccess/WellKnownBinary.cs:
	* Data/SimpleFeatureAccess/SimpleFeatureAccess.cs: add WKB
	parser

2009-02-23  Scott Ellington  <scott.ellington@gmail.com>

	* Point.cs:
	* Rectangle.cs: implement IEquatable<T>

2009-02-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: use generic type methods

2009-02-11  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: center labels

2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: use better outline label on ms.net

2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Xml/Serialization/MapSerializer.cs: range min/max should
	defaut to double min/max respectively
